사원 생성 오류 고침