@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -59,7 +60,7 @@ public class SecurityConfig {
     @Bean // 이 메서드가 반환하는 객체를 Spring IoC 컨테이너에 빈으로 등록합니다.
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
          http
-                .cors().configurationSource(corsConfigurationSource())  // CORS 설정 활성화
+                .cors()  // CORS 설정 활성화
                  .and()
                 .csrf().disable()  // CSRF 방지 기능 비활성화
                 .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()  // 세션을 사용하지 않도록 설정
@@ -102,14 +103,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();// CORS 설정을 위한 객체 생성
         CorsConfiguration config = new CorsConfiguration();// CORS 설정 객체 생성
-        config.setAllowCredentials(true); //인증 정보(예: 쿠키, HTTP 인증 및 클라이언트 SSL 인증서)를 포함한 요청을 받을 수 있게 한다
+//        config.setAllowCredentials(true); //인증 정보(예: 쿠키, HTTP 인증 및 클라이언트 SSL 인증서)를 포함한 요청을 받을 수 있게 한다
         // 이 설정이 활성화되어 있을 때는 `Access-Control-Allow-Origin` 헤더에서 "*"를 사용할 수 없다.
-//        config.setAllowedOriginPatterns(List.of("*")); // 모든 오리진 허용
-        config.setAllowedOrigins(List.of("http://welldev.iptime.org:8888"
-                ,"http://localhost:3000"
-                ,"http://welldev.iptime.org:8080"
-        )); // 클라이언트 도메인 추가
-//        config.setAllowedOrigins(List.of("*", "*/*")); // 모든 도메인에서의 접근 허용
+        config.setAllowCredentials(false); // 인증 정보를 요청에 포함하지 않음
+        config.setAllowedOrigins(Collections.emptyList()); // 어떤 경로도 허용하지 않음
+//        config.setAllowedOrigins(List.of("http://welldev.iptime.org:8888"
+//                ,"http://localhost:3000"
+//                ,"http://welldev.iptime.org:8080"
+//        )); // 클라이언트 도메인 추가
         config.setAllowedMethods(List.of("POST", "PUT", "DELETE", "GET", "OPTIONS", "HEAD")); // 허용할 HTTP 메서드 설정
         config.setAllowedHeaders(List.of("*"));  // 허용할 헤더 설정
         // PNA 관련 설정을 위해 여기에 추가
